<resources>
    <string name="app_name">Aresto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Keranjang</string>
    <string name="title_tab_profile">Profil</string>
    <string name="text_title_header">Hai Arkan,</string>
    <string name="text_subtitle_header">Mau makan apa hari ini?</string>
    <string name="desc_cart_menu">Menu Keranjang</string>
    <string name="desc_profile_menu">Menu Profil</string>
    <string name="text_banner_name">Diskon 20%</string>
    <string name="text_banner_desc">Pesan makanan lewat aplikasi dan dapatkan diskonmu</string>
    <string name="desc_image_banner">Gambar banner</string>
    <string name="desc_image_icon_banner">Gambar logo banner</string>
    <string name="text_title_list">List Menu Makanan</string>
    <string name="desc_image_list_grid">Ubah tampilan grid ke list</string>
    <string name="desc_image_product">Gambar Produk Makanan</string>
    <string name="desc_back_button">tombol kembali</string>
    <string name="desc_icon_location">ikon lokasi</string>
    <string name="text_location">Lokasi</string>
    <string name="desc_ic_plus_cart">Menambahkan makanan di keranjang</string>
    <string name="desc_ic_minus_cart">Mengurangi makanan di keranjang</string>
    <string name="desc_image_profile">Foto Profile</string>
    <string name="hint_name">Nama</string>
    <string name="text_name">Arkan Mahardika</string>
    <string name="text_hint_username">Username</string>
    <string name="text_username">arkan_3h</string>
    <string name="text_hint_email">Email</string>
    <string name="text_email">arkan.mahardika.1@gmail.com</string>
    <string name="text_edit">Edit</string>
    <string name="text_profile">Profil</string>
    <string name="text_cart">Keranjang</string>
    <string name="text_hint_notes">Catatan</string>
    <string name="desc_btn_remove_cart">Hapus produk</string>
    <string name="text_checkout">Pesan</string>
    <string name="text_total_price">Total Harga</string>
    <string name="total_quantity">x%s</string>
    <string name="add_to_cart">Tambahkan ke Keranjang - %s</string>
    <string name="text_cart_is_empty">Keranjang masih kosong</string>
    <string name="loading">Loading</string>
    <string name="add_to_cart_failed">Gagal Menambahkan ke keranjang</string>
    <string name="text_add_to_cart_success">Berhasil ditambahkan ke keranjang</string>
    <string name="title_checkout">Konfirmasi Pesanan</string>
    <string name="text_delivery_method">Metode Pengiriman</string>
    <string name="text_pick_up">Ambil Sendiri</string>
    <string name="text_delivery">Dikirim</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Tunai</string>
    <string name="text_e_wallet">Dompet Digital</string>
    <string name="text_price_sum">Ringkasan Pembayaran</string>
    <string name="text_back_to_home">Kembali ke Home</string>
    <string name="text_title_order_success">Pesanan Selesai</string>
    <string name="desc_splash_screen">Gambar Splash Screen</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_confirm_password">Konfirmasi Password</string>
    <string name="text_register">Registrasi</string>
    <string name="text_already_have_an_account_click_here">Sudah memiliki akun? Klik di sini</string>
    <string name="text_login">Login</string>
    <string name="text_does_not_have_an_account_click_here">Belum memiliki akun? Klik di sini</string>
    <string name="text_highlight_login_here">Login di sini</string>
    <string name="text_error_name_cannot_empty">Nama tidak boleh kosong</string>
    <string name="text_error_email_empty">Email tidak boleh kosong</string>
    <string name="text_error_email_invalid">Format email tidak valid</string>
    <string name="text_error_password_empty">Password tidak boleh kosong</string>
    <string name="text_error_password_less_than_8_char">Password harus lebih dari 8 karakter</string>
    <string name="text_password_does_not_match">Password tidak sama</string>
    <string name="text_logout">Logout</string>
    <string name="text_logout_confirmation">Apakah anda yakin untuk logout?</string>
    <string name="text_back">Kembali</string>
    <string name="text_cancel">Batal</string>
    <string name="text_change_password">Ubah Password</string>
    <string name="text_save">Simpan</string>
    <string name="text_edit_pofile_success">Berhasil merubah info profil</string>
    <string name="text_edit_pofile_failed">Gagal merubah info profil!</string>
    <string name="text_close">Tutup</string>
    <string name="text_change_password_dialog">Permintaan penggantian password telah dikirimkan ke email : %s \nSilahkan periksa kotak masuk dan folder spam</string>
    <string name="error_checkout">Checkout gagal</string>
</resources>