<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ProfileFragment"
    android:padding="16dp">

    <View
        android:id="@+id/view_profile_bg"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/bg_rounded_48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_profile"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/view_profile_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_profile_bg"/>

    <LinearLayout
        android:id="@+id/llEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_marginTop="12dp"
            android:background="@color/md_theme_onBackground"/>

        <ImageView
            android:id="@+id/btn_edit"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:padding="12dp"
            android:src="@drawable/ic_edit"
            android:layout_gravity="center_vertical"
            app:tint="@color/md_theme_onBackground"
            android:contentDescription="@string/desc_image_list_grid"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="32dp"
        app:shapeAppearanceOverlay="@style/image_rounded_medium"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/view_profile_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_image_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="28dp"
        app:boxCornerRadiusBottomStart="28dp"
        app:boxCornerRadiusTopEnd="28dp"
        app:boxCornerRadiusTopStart="28dp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/hint_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="28dp"
        app:boxCornerRadiusBottomStart="28dp"
        app:boxCornerRadiusTopEnd="28dp"
        app:boxCornerRadiusTopStart="28dp"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_change_password"
        android:textSize="16sp"
        android:gravity="end"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/fl_btn_loading_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_change_password">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/text_logout"
            android:textSize="16sp"
            android:backgroundTint="@color/md_theme_inversePrimary"
            android:textColor="@color/md_theme_onBackground"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/text_login"
            android:textSize="16sp"
            android:backgroundTint="@color/md_theme_inversePrimary"
            android:textColor="@color/md_theme_onBackground"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/text_save"
            android:textSize="16sp"
            android:backgroundTint="@color/md_theme_inversePrimary"
            android:textColor="@color/md_theme_onBackground"
            android:visibility="gone"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>