<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingVertical="8dp"
    android:paddingHorizontal="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_product_image"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/image_rounded_small"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/desc_image_product" />

    <ImageView
        android:id="@+id/btn_remove_cart"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_btn_remove_cart"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btn_remove_cart"
        app:layout_constraintStart_toEndOf="@id/iv_product_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nasi Padang Nasi Padang Nasi Padang Nasi Padang Nasi Padang" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:textSize="16sp"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/iv_product_image"
        app:layout_constraintEnd_toStartOf="@+id/btn_minus_cart"
        app:layout_constraintStart_toEndOf="@+id/iv_product_image"
        tools:text="IDR. 20.000" />

    <TextView
        android:id="@+id/tv_qty_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        tools:text="0"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btn_plus_cart"
        app:layout_constraintTop_toTopOf="@id/btn_plus_cart"
        app:layout_constraintBottom_toBottomOf="@id/btn_plus_cart"/>

    <ImageView
        android:id="@+id/btn_plus_cart"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:src="@drawable/ic_plus"
        android:background="@drawable/bg_btn_rounded_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_product_image"
        android:contentDescription="@string/desc_ic_plus_cart"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/btn_minus_cart"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:src="@drawable/ic_minus"
        android:background="@drawable/bg_btn_rounded_outline"
        app:layout_constraintEnd_toStartOf="@id/tv_qty_product"
        app:layout_constraintTop_toTopOf="@id/btn_plus_cart"
        app:layout_constraintBottom_toBottomOf="@id/btn_plus_cart"
        android:contentDescription="@string/desc_ic_minus_cart"
        android:clickable="true"
        android:focusable="true"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_notes_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/text_hint_notes"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="3"
        android:padding="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_product_image"
        tools:text="Catatan" />

</androidx.constraintlayout.widget.ConstraintLayout>